# mosquitto

./: .gitignore  .uncrustify.cfg  CMakeLists.txt  ChangeLog.txt  LICENSE.txt  Makefile  NOTICE.md  README-compiling.md  README-windows.txt  README.md  aclfile.example  buildtest.py  codecov.yml  config.h  config.mk  format.sh  mosquitto.conf  run_tests.py  set-version.sh  vcpkg.json
apps/db_dump/: CMakeLists.txt  Makefile  db_dump.c  db_dump.h  json.c  print.c  stubs.c
apps/mosquitto_ctrl/: CMakeLists.txt  Makefile  broker.c  client.c  ctrl_shell.c  ctrl_shell.h  ctrl_shell_broker.c  ctrl_shell_client.c  ctrl_shell_completion_tree.c  ctrl_shell_dynsec.c  ctrl_shell_internal.h  ctrl_shell_io.c  ctrl_shell_post_connect.c  ctrl_shell_pre_connect.c  ctrl_shell_printf.c  dynsec.c  dynsec_client.c  dynsec_group.c  dynsec_role.c  example.c  mosquitto_ctrl.c  mosquitto_ctrl.h  options.c
apps/mosquitto_passwd/: CMakeLists.txt  Makefile  get_password.c  mosquitto_passwd.c
apps/mosquitto_signal/: CMakeLists.txt  Makefile  mosquitto_signal.c  mosquitto_signal.h  signal_unix.c  signal_windows.c
client/: CMakeLists.txt  Makefile  client_props.c  client_shared.c  client_shared.h  pub_client.c  pub_shared.c  rr_client.c  sub_client.c  sub_client_output.c
lib/: CMakeLists.txt  Makefile  actions_publish.c  actions_subscribe.c  actions_unsubscribe.c  alias_mosq.c  callbacks.c  callbacks.h  connect.c  extended_auth.c  handle_auth.c  handle_connack.c  handle_disconnect.c  handle_ping.c  handle_pubackcomp.c  handle_publish.c  handle_pubrec.c  handle_pubrel.c  handle_suback.c  handle_unsuback.c  helpers.c  http_client.c  http_client.h  libmosquitto.c  linker.version  logging_mosq.c  loop.c  messages_mosq.c  mosquitto_internal.h  net_mosq.c  net_mosq.h  net_mosq_ocsp.c  net_ws.c  options.c  packet_datatypes.c  packet_mosq.c  packet_mosq.h  property_mosq.c  property_mosq.h  read_handle.c  (+14 more)
lib/cpp/: CMakeLists.txt  Makefile  mosquittopp.cpp
libcommon/: CMakeLists.txt  Makefile  base64_common.c  cjson_common.c  file_common.c  linker.version  memory_common.c  mqtt_common.c  password_common.c  property_common.c  property_common.h  random_common.c  strings_common.c  time_common.c  topic_common.c  utf8_common.c
plugins/: CMakeLists.txt  Makefile  README.md  plugin.mk
plugins/acl-file/: CMakeLists.txt  Makefile  acl_check.c  acl_parse.c  plugin.c  test.conf
plugins/dynamic-security/: CMakeLists.txt  Makefile  acl.c  auth.c  clientlist.c  clients.c  config.c  config_init.c  control.c  default_acl.c  details.c  dynamic_security.h  grouplist.c  groups.c  kicklist.c  migrate_to_dynsec.py  plugin.c  rolelist.c  roles.c  test.conf  test.sh  tick.c
plugins/examples/: CMakeLists.txt  Makefile
plugins/password-file/: CMakeLists.txt  Makefile  password_check.c  password_parse.c  plugin.c  test.conf  test.pwfile  test.sh
plugins/persist-sqlite/: CMakeLists.txt  Makefile  base_msgs.c  client_msgs.c  clients.c  common.c  init.c  migrate_to_persist_sqlite.py  persist_sqlite.h  plugin.c  restore.c  retain_msgs.c  subscriptions.c  test.conf  test.sh  tick.c  util.h  will.c
plugins/sparkplug-aware/: CMakeLists.txt  Makefile  README.md  on_message.c  plugin.c  plugin_global.h  test.conf  test.sh
src/: CMakeLists.txt  Makefile  acl_file.c  acl_file.h  bridge.c  bridge_topic.c  broker_control.c  conf.c  conf_includedir.c  context.c  control.c  control_common.c  database.c  handle_auth.c  handle_connack.c  handle_connect.c  handle_disconnect.c  handle_publish.c  handle_subscribe.c  handle_unsubscribe.c  http_api.c  http_serv.c  keepalive.c  linker-aix.syms  linker-macosx.syms  linker.syms  listeners.c  logging.c  loop.c  mosquitto.c  mosquitto_broker_internal.h  mux.c  mux.h  mux_epoll.c  mux_kqueue.c  mux_poll.c  net.c  password_file.c  password_file.h  persist.h  (+48 more)
test/: CMakeLists.txt  Makefile  mosq_test.py  mqtt5_props.py  mqtt5_rc.py  path_helper.h  ptest.py
test/apps/: CMakeLists.txt  Makefile  TODO.md
test/broker/: 01-bad-initial-packets.py  01-connect-575314.py  01-connect-accept-protocol.py  01-connect-allow-anonymous.py  01-connect-auto-id.py  01-connect-disconnect-v5.py  01-connect-global-max-clients.py  01-connect-global-max-connections.py  01-connect-listener-allow-anonymous.py  01-connect-max-connections.py  01-connect-max-keepalive.py  01-connect-take-over.py  01-connect-uname-no-password-denied.py  01-connect-uname-or-anon.py  01-connect-uname-password-denied-no-will.py  01-connect-uname-password-denied.py  01-connect-uname-password-success-no-tls.py  01-connect-unix-socket.py  01-connect-windows-line-endings.py  01-connect-zero-length-id.py  01-plugin-connect-uname-password-denied.py  02-shared-nolocal.py  02-shared-qos0-v5.py  02-subhier-crash.py  02-subpub-b2c-topic-alias.py  02-subpub-qos0-long-topic.py  02-subpub-qos0-oversize-payload.py  02-subpub-qos0-queued-bytes.py  02-subpub-qos0-retain-as-publish.py  02-subpub-qos0-send-retain.py  02-subpub-qos0-subscription-id.py  02-subpub-qos0-topic-alias-unknown.py  02-subpub-qos0-topic-alias.py  02-subpub-qos1-message-expiry-retain.py  02-subpub-qos1-message-expiry-will.py  02-subpub-qos1-message-expiry.py  02-subpub-qos1-nolocal.py  02-subpub-qos1-oversize-payload.py  02-subpub-qos1.py  02-subpub-qos2-1322.py  (+256 more)
test/client/: 02-subscribe-argv-errors-tls-psk.py  02-subscribe-argv-errors-tls.py  02-subscribe-argv-errors-without-tls.py  02-subscribe-env.py  02-subscribe-filter-out.py  02-subscribe-format-json-properties.py  02-subscribe-format-json-qos0.py  02-subscribe-format-json-qos1.py  02-subscribe-format-json-retain.py  02-subscribe-format.py  02-subscribe-null.py  02-subscribe-qos1-ws.py  02-subscribe-qos1.py  02-subscribe-retain-handling.py  02-subscribe-verbose.py  03-publish-argv-errors-tls-psk.py  03-publish-argv-errors-tls.py  03-publish-argv-errors-without-tls.py  03-publish-env.py  03-publish-file-empty.py  03-publish-file.py  03-publish-options-file.py  03-publish-qos0-empty.py  03-publish-qos1-properties.py  03-publish-qos1-ws-large.py  03-publish-qos1-ws.py  03-publish-qos1.py  03-publish-repeat.py  03-publish-socks.py  (+19 more)
(+802 files in other folders)
