if(NOT WIN32)
	add_subdirectory(add-properties)
	add_subdirectory(client-lifetime-stats)
	add_subdirectory(message-timestamp)
endif()
add_subdirectory(auth-by-env)
add_subdirectory(auth-by-ip)
add_subdirectory(client-properties)
add_subdirectory(connection-state)
add_subdirectory(delayed-auth)
add_subdirectory(deny-protocol-version)
add_subdirectory(force-retain)
add_subdirectory(limit-subscription-qos)
add_subdirectory(payload-ban)
add_subdirectory(payload-modification)
add_subdirectory(payload-size-stats)
add_subdirectory(plugin-event-stats)
add_subdirectory(print-ip-on-publish)
add_subdirectory(tick-interval)
add_subdirectory(topic-hierarchy-flatten)
add_subdirectory(topic-modification)
add_subdirectory(topic-jail)
add_subdirectory(wildcard-temp)
